@@ -1,3 +1,8 @@
+lldpd (0.7.1)
+  * Features
+    + Upstart support.
+    + Remove Unix socket when there is no process listening.
+
 lldpd (0.7.0)
   * Global changes:
     + FreeBSD support.
